--- a/shopmanager/shopback/trades/templates/trades/exchanges_template.html
+++ b/shopmanager/shopback/trades/templates/trades/exchanges_template.html
@@ -3,7 +3,7 @@
   <head>
     <title>创建退换货单</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
