--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -14,8 +14,9 @@
       <p style="color:red;">分享<a href="/weixin/sampleads/{{ pk }}/">您的专属VIP邀请码</a>，越多人使用，您中奖的几率就越大！</p>
       {% endif %}
       
-      <p style="color:#3071a9">第一批中奖共{{ first_batch }}名（VIP专属码使用<font style="color:red;">超过10次</font>），祝贺她们！ <a href="/weixin/finallist/1/1/">查看详细名单 >></a></p>
-      <p style="color:#3071a9">第二批中奖共{{ second_batch }}名（VIP专属码使用<font style="color:red;">超过12次</font>），祝贺她们！ <a href="/weixin/finallist/2/1/">查看详细名单 >></a></p>
+      <p style="color:#3071a9">第一批中奖{{ first_batch }}名（VIP专属码使用<font style="color:red;">超过10次</font>），祝贺她们！ <a href="/weixin/finallist/1/1/">详细名单 >></a></p>
+      <p style="color:#3071a9">第二批中奖{{ second_batch }}名（VIP专属码使用<font style="color:red;">超过12次</font>），祝贺她们！ <a href="/weixin/finallist/2/1/">详细名单 >></a></p>
+      <p style="color:#3071a9">第三批中奖{{ second_batch }}名（VIP专属码使用<font style="color:red;">超过15次</font>），祝贺她们！ <a href="/weixin/finallist/3/1/">详细名单 >></a></p>
 
     </div>
   </div>
@@ -29,7 +30,7 @@
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
       <a href="#" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvxy2LNzVj0ibrZBohfZoj47vaUqGEt2LPo9Jz8dGB5HmseXXIyFEKeRw98Yh7t18OeUeOAWaUNAyA/0" alt="...">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsome9ACKeO70esgWKJl1eDiaLfrjLUgfCv5J1XsUzEicyicpFuR3GYKW7yhbNCjEwjgYM5Wu0WB2FjQ/0" alt="...">
       </a>
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
       <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
