--- a/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
@@ -11,7 +11,7 @@
     <div class="panel-body">
       <p style="color:red">亲，恭喜您的申请获得通过！</p>
       <h3>拍睡袋的流程如下：</h3>
-      <ul class="list-group">
+      <ol class="list-group">
       <li class="list-group-item">1) 到天猫【优尼世界旗舰店】找到小小派睡袋链接，选择您喜欢的款式，拍下付款。</li>
       <li class="list-group-item">2）每天下午5点之前拍下的订单，当日发货。江浙沪皖24小时内到货。</li>
       <li class="list-group-item">3）收到货后，如果满意。请确认收货，天猫给好评（不得有免费字样）。</li>
@@ -19,7 +19,7 @@
       <li class="list-group-item">5）单独联系优尼世界服务群的微信客服，把微信截图发送给客服。</li>
       <li class="list-group-item">6）到微信菜单【我的】->【我的订单】，申请VIP返利（系统自动按订单全额退款）。</li>
       <li class="list-group-item">7）24小时内返现到账（请仔细填写银行账户信息）。</li>
-      </ul>
+      </ol>
       
       <p>优尼世界本次活动将派发850个睡袋，规模和工作量都超前盛大和艰苦。我们有微信客服从早上9:00值班到晚上11:30，解答大家的疑问，饭顾不上吃，连厕所都顾不上了。全程有技术人员维护微信系统，不断推出功能共大家查询邀请数，中奖名单，订单返现等，每天都奋战到凌晨。<br>希望大家能积极配合我们的工作，让我们能更好地为亲们服务。<br>我们唯一希望的就是大家能收到满意的产品，并且能帮助我们传播优尼世界品牌！传播优尼世界从宝宝角度出发，设计宝宝喜爱的多彩出色的产品理念！</p>
       <h3>常见问题：</h3>
