--- a/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
@@ -14,23 +14,23 @@
       <ul class="list-group">
       <li class="list-group-item">1）到天猫【优尼世界旗舰店】找到小小派睡袋链接，选择您喜欢的款式，拍下付款。</li>
       <li class="list-group-item">2）每天下午5点之前拍下的订单，当日发货。江浙沪皖24小时内到货。</li>
-      <li class="list-group-item">3）收到货后，如果满意。请确认收货，天猫给好评（不得有免费字样）。</li>
+      <li class="list-group-item">3）收到货后，如果满意。请确认收货，天猫给好评（<font style="color:red">不得有免费字样</font>）。</li>
       <li class="list-group-item">4）拍照并写购买/申请心得，分享到微信朋友圈。</li>
       <li class="list-group-item">5）单独联系优尼世界服务群的微信客服，把微信截图发送给客服。</li>
-      <li class="list-group-item">6）到微信菜单【我的】->【我的订单】，申请VIP返利（系统自动按订单全额退款）。</li>
+      <li class="list-group-item">6）到微信菜单【我的】->【我的订单】，申请VIP返利（系统自动按订单<font style="color:red">全额</font>退款）。</li>
       <li class="list-group-item">7）24小时内返现到账（请仔细填写银行账户信息）。</li>
       </ul>
       
-      <p>优尼世界本次活动将派发850个睡袋，规模和工作量都超前盛大和艰苦。我们有微信客服从早上9:00值班到晚上11:30，解答大家的疑问，饭顾不上吃，连厕所都顾不上了。全程有技术人员维护微信系统，不断推出功能共大家查询邀请数，中奖名单，订单返现等，每天都奋战到凌晨。<br>希望大家能积极配合我们的工作，让我们能更好地为亲们服务。<br>我们唯一希望的就是大家能收到满意的产品，并且能帮助我们传播优尼世界品牌！传播优尼世界从宝宝角度出发，设计宝宝喜爱的多彩出色的产品理念！</p>
+      <p>优尼世界本次活动将派发850个睡袋，规模和工作量都超前盛大和艰苦。我们有微信客服从早上9:00值班到晚上11:30，解答大家的疑问，饭顾不上吃，连厕所都顾不上了。全程有技术人员维护微信系统，不断推出功能共大家查询邀请数，中奖名单，订单返现等，每天都奋战到凌晨。<br>希望大家能积极配合我们的工作，让我们能更好地为亲们服务。<br><font style="color:red">我们唯一希望的就是大家能收到满意的产品，并且能帮助我们传播优尼世界品牌！传播优尼世界从宝宝角度出发，设计宝宝喜爱的多彩出色的产品理念！</font></p>
       <h3>常见问题：</h3>
       <ul class="list-group">
-      <p>1. 返现申请的入口在哪里？<br>&nbsp;&nbsp;在微信菜单【我的】->【我的订单】里面，如下图（只有天猫拍下后，才能查到订单）：</p>
-      <p>2. 返现是全额退款吗？<br>&nbsp;&nbsp;是的，根据你拍下的金额，全额返现。</p>
-      <p>3. 我现在要拍，睡袋的天猫链接在哪？<br>&nbsp;&nbsp;方法一：手机浏览器（不是微信）: http://detail.m.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;方法二：电脑浏览器：http://detail.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;方法三：淘宝搜索“优尼世界旗舰店 睡袋”，选择小小派睡袋。</p>
-      <p>4. 我申请的时候选择是120cm，但是现在觉得90cm就够了，可以拍90cm的吗？<br>&nbsp;&nbsp;亲，只要链接里面可以拍的，你都可以拍。不需要和你申请的时候一致。<br>&nbsp;&nbsp;建议亲根据宝宝身高选择睡袋。90cm适合0-2岁，120cm适合2-6岁，140cm适合3-8岁。<br>&nbsp;&nbsp;选择薄款适合现在的季节使用。</p>
-      <p>5. 拍下后，需要留言备注是微信的活动吗？<br>&nbsp;&nbsp;不需要。只要订单的收货人手机号和你的微信绑定的手机号一致，在微信菜单【我的】->【我的订单】里就可以查询到订单信息了。</p>
-      <p>6. 问天猫客服为啥不回答这个活动的问题？<br>&nbsp;&nbsp;亲，微信和天猫互相屏蔽。我们天猫部门和微信部门也是分开的，微信部门的业务天猫客服不参与，也不了解。公司也禁止天猫客服回答任何微信活动问题。</p>
-      <p>7. 天猫上睡袋那么多，为什么要选择优尼世界的？<br>&nbsp;&nbsp;亲，把优尼世界的睡袋和其他睡袋放到你3岁的宝宝跟前，宝宝一定会选择优尼世界！宝宝们喜欢活泼多彩的动物元素，只有优尼世界的留美海归团队有能力设计出最时尚活泼的睡袋！</p>
+      <p><font style="color:#3071a9">1. 返现申请的入口在哪里？</font><br>&nbsp;&nbsp;&nbsp;在微信菜单【我的】->【我的订单】里面，如下图（只有天猫拍下后，才能查到订单）：</p>
+      <p><font style="color:#3071a9">2. 返现是全额退款吗？</font><br>&nbsp;&nbsp;&nbsp;是的，根据你拍下的金额，全额返现。</p>
+      <p><font style="color:#3071a9">3. 我现在要拍，睡袋的天猫链接在哪？</font><br>&nbsp;&nbsp;&nbsp;方法一：手机浏览器（不是微信）: http://detail.m.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;&nbsp;方法二：电脑浏览器：http://detail.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;&nbsp;方法三：淘宝搜索“优尼世界旗舰店 睡袋”，选择小小派睡袋。</p>
+      <p><font style="color:#3071a9">4. 我申请的时候选择是120cm，但是现在觉得90cm就够了，可以拍90cm的吗？</font><br>&nbsp;&nbsp;&nbsp;亲，只要链接里面可以拍的，你都可以拍。不需要和你申请的时候一致。<br>&nbsp;&nbsp;&nbsp;建议亲根据宝宝身高选择睡袋。90cm适合0-2岁，120cm适合2-6岁，140cm适合3-8岁。<br>&nbsp;&nbsp;&nbsp;选择薄款适合现在的季节使用。</p>
+      <p><font style="color:#3071a9">5. 拍下后，需要留言备注是微信的活动吗？</font><br>&nbsp;&nbsp;&nbsp;不需要。只要订单的收货人手机号和你的微信绑定的手机号一致，在微信菜单【我的】->【我的订单】里就可以查询到订单信息了。</p>
+      <p><font style="color:#3071a9">6. 问天猫客服为啥不回答这个活动的问题？</font><br>&nbsp;&nbsp;&nbsp;亲，微信和天猫互相屏蔽。我们天猫部门和微信部门也是分开的，微信部门的业务天猫客服不参与，也不了解。公司也禁止天猫客服回答任何微信活动问题。</p>
+      <p><font style="color:#3071a9">7. 天猫上睡袋那么多，为什么要选择优尼世界的？</font><br>&nbsp;&nbsp;&nbsp;亲，把优尼世界的睡袋和其他睡袋放到你3岁的宝宝跟前，宝宝一定会选择优尼世界！宝宝们喜欢活泼多彩的动物元素，只有优尼世界的留美海归团队有能力设计出最时尚活泼的睡袋！</p>
     </div>
   </div>
   
