--- a/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
@@ -26,7 +26,7 @@
       <ul class="list-group">
       <p><font style="color:#3071a9">1. 返现申请的入口在哪里？</font><br>&nbsp;&nbsp;&nbsp;在微信菜单【我的】->【我的订单】里面，有提交银行信息的返利入口。见页面底部 图二（只有天猫拍下后，才能查到订单）。</p>
       <p><font style="color:#3071a9">2. 返现是全额退款吗？</font><br>&nbsp;&nbsp;&nbsp;是的，根据你拍下的金额，全额返现。</p>
-      <p><font style="color:#3071a9">3. 我现在要拍，睡袋的天猫链接在哪？</font><br>&nbsp;&nbsp;&nbsp;方法一：手机浏览器（不是微信）: http://detail.m.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;&nbsp;方法二：电脑浏览器：http://detail.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;&nbsp;方法三：淘宝搜索“优尼世界旗舰店 睡袋”，选择小小派睡袋。</p>
+      <p><font style="color:#3071a9">3. 我现在要拍，睡袋的天猫链接在哪？</font><br>&nbsp;&nbsp;&nbsp;方法一：微信扫描下面二维码（保存图片到手机，微信扫一扫，选择相册），直接到睡袋链接拍下:<a href="#" class="thumbnail"><img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuzohN5DJPX5psSXEXWiaZ04bHByUWvExH8kmIyiaQkKic86zBd23bLTTjsPZopSP2ug9Uv60xLtGBpQ/0"></a><br>&nbsp;&nbsp;&nbsp;方法二：手机浏览器（不是微信）: http://detail.m.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;&nbsp;方法二：电脑浏览器：http://detail.tmall.com/item.htm?id=19810857532<br>&nbsp;&nbsp;&nbsp;方法三：淘宝搜索“优尼世界旗舰店 睡袋”，选择小小派睡袋。</p>
       <p><font style="color:#3071a9">4. 我申请的时候选择是120cm，但是现在觉得90cm就够了，可以拍90cm的吗？</font><br>&nbsp;&nbsp;&nbsp;亲，只要链接里面可以拍的，你都可以拍。不需要和你申请的时候一致。<br>&nbsp;&nbsp;&nbsp;建议亲根据宝宝身高选择睡袋。90cm适合0-2岁，120cm适合2-6岁，140cm适合3-8岁。<br>&nbsp;&nbsp;&nbsp;选择薄款适合现在的季节使用。</p>
       <p><font style="color:#3071a9">5. 拍下后，需要留言备注是微信的活动吗？</font><br>&nbsp;&nbsp;&nbsp;<font style="color:red">不需要。</font>只要订单的收货人手机号和你的微信绑定的手机号一致，在微信菜单【我的】->【我的订单】里就可以查询到订单信息了。</p>
       <p><font style="color:#3071a9">6. 问天猫客服为啥不回答这个活动的问题？</font><br>&nbsp;&nbsp;&nbsp;亲，微信和天猫互相屏蔽。我们天猫部门和微信部门也是分开的，微信部门的业务天猫客服不参与，也不了解。公司也禁止天猫客服回答任何微信活动问题。</p>
