refund application fix

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -26,7 +26,7 @@
     <div class="panel-body">
       {% if has_order %}
       {% if passed %}
-      <p>亲，恭喜您，你的试用申请已审核通过啦！</p>
+      <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦！</p>
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
       <a href="#" class="thumbnail">
