--- a/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
@@ -52,7 +52,9 @@
       {% if refund %}
       {% include "weixin/refundresponse.html" %}
       {% else %}
+      {% if passed %}
       {% include "weixin/refundapply.html" %}
+      {% endif %}
       {% endif %}
     </div>
   </div>
