--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -16,7 +16,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
-	  <p style="color:red"> 1）前三批审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
+	  <p style="color:red"> 1）前四批审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
 	</div>
       </div>
       <div class="row">
