--- a/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
@@ -22,7 +22,7 @@
       <li class="list-group-item">7）24小时内返现到账（请仔细填写银行账户信息）。</li>
       </ul>
       
-      <p>优尼世界本次活动将派发850个睡袋，规模和工作量都超前盛大和艰苦。我们有微信客服从早上9:00值班到晚上11:30，解答大家的疑问，饭顾不上吃，连厕所都顾不上了。全程有技术人员维护微信系统，不断推出功能共大家查询邀请数，中奖名单，订单返现等，每天都奋战到凌晨。<br>希望大家能积极配合我们的工作，让我们能更好地为亲们服务。<br><font style="color:red">我们唯一希望的就是大家能收到满意的产品，并且能帮助我们传播优尼世界品牌！传播优尼世界从宝宝角度出发，设计宝宝喜爱的多彩出色的产品理念！</font></p>
+      <p>优尼世界本次活动将派发1000个睡袋(临时又增加了150个)，规模和工作量都超前盛大和艰苦。我们有微信客服从早上9:00值班到晚上11:30，解答大家的疑问，饭顾不上吃，连厕所都顾不上了。全程有技术人员维护微信系统，不断推出功能共大家查询邀请数，中奖名单，订单返现等，每天都奋战到凌晨。<br>希望大家能积极配合我们的工作，让我们能更好地为亲们服务。<br><font style="color:red">我们唯一希望的就是大家能收到满意的产品，并且能帮助我们传播优尼世界品牌！传播优尼世界从宝宝角度出发，设计宝宝喜爱的多彩出色的产品理念！</font></p>
       <h3>常见问题：</h3>
       <ul class="list-group">
       <p><font style="color:#3071a9">1. 返现申请的入口在哪里？</font><br>&nbsp;&nbsp;&nbsp;在微信菜单【我的】->【我的订单】里面，有提交银行信息的返利入口。见页面底部 图二（只有天猫拍下后，才能查到订单）。</p>
