--- a/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
@@ -15,9 +15,8 @@
   <div class="col-xs-12">
     <input id="id_trade_id" type="hidden" value="{{ tradedata.tradeid }}"/>{% csrf_token %}
     <input id="id_code" class="form-control" type="text" placeholder="您的专属VIP邀请码"/>
-    <input id="id_bank_account" class="form-control" type="text" placeholder="您的银行帐号"/>
-    <input id="id_account_owner" class="form-control" type="text" placeholder="您的开户名"/>
-    <input id="id_bank_address" class="form-control" type="text" placeholder="开户银行具体名称（详细省、市、支行）"/>
+    <input id="id_bank_account" class="form-control" type="text" placeholder="您的支付宝帐号"/>
+    <input id="id_account_owner" class="form-control" type="text" placeholder="支付宝对应姓名"/>
   </div>
 </div>
 
