--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -18,6 +18,7 @@
       <p style="color:#3071a9">第二批中奖{{ second_batch }}名（VIP专属码使用<font style="color:red;">超过12次</font>），祝贺她们！ <a href="/weixin/finallist/2/1/">详细名单 >></a></p>
       <p style="color:#3071a9">第三批中奖{{ third_batch }}名（VIP专属码使用<font style="color:red;">超过15次</font>），祝贺她们！ <a href="/weixin/finallist/3/1/">详细名单 >></a></p>
       <p style="color:#3071a9">第四批中奖{{ fourth_batch }}名（VIP专属码使用<font style="color:red;">超过19次</font>），祝贺她们！ <a href="/weixin/finallist/4/1/">详细名单 >></a></p>
+      <p style="color:#3071a9">第五批中奖{{ fifth_batch }}名（VIP专属码使用<font style="color:red;">超过23次</font>），祝贺她们！ <a href="/weixin/finallist/5/1/">详细名单 >></a></p>
     </div>
   </div>
 
@@ -30,7 +31,7 @@
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
       <a href="#" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuzohN5DJPX5psSXEXWiaZ04MUSm4atdl9HTOmqOCnv5vygOOAG7D0XyuhZsx1M8TOH8nSd67E7Wmg/0" alt="...">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtmWPcf8VyuRgL4tYeyjkHHYFJv2PNBnCUCf5dCj7ygTOobt4LliaX5EFOn7qdLcicicg88RiaDftbDQA/0" alt="...">
       </a>
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
       <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
