--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -15,10 +15,10 @@
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
       <div class="row">
 	<div class="col-xs-12">
+	  <p style="color:red">公告：最后214份中奖名单将在8月11日9：00之前一起公布（周六晚不会公布名单，大家好好休息哦）！ </p>
 	  <p>妈妈们申请踊跃，优尼世界决定<font style="color:red">增加150个名额</font>，总计1000个。快告诉朋友来申请吧！</p>
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
 	  <p style="color:red"> 1）前五批审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
-	  <p style="color:red">注意：最后214份中奖名单将在8月11日9：00之前一起公布（周六晚不会公布名单，大家好好休息哦）！ </p>
 	</div>
       </div>
       <div class="row">
