--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -26,7 +26,8 @@
     <div class="panel-heading" style="color:orange">审核状态</div>
     <div class="panel-body">
       {% if has_order %}
-      {% if passed %}
+      {% if order_status > 0  %}
+        {% if order_status < 7 %}
       <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦！</p>
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
@@ -35,6 +36,35 @@
       </a>
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
       <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
+        {% else %}
+      <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
+      <p>您总共邀请了<font style="color:red;">{{ usage_count }}</font>位好友，优尼世界感谢您的努力！</p>
+        {% if order_status == 7 %}
+      <p>我们赠您<font style="color:red;">限量</font>50元优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;">立减50元！</font>绝对不可多得哦！</p>
+      <p>点击下图领取：</p>
+      <a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=139012922" class="thumbnail">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTpts0BGaZIDymKW0sKj1bH5g3c7JhL6ZQue7UKRZZ4oayDopcge9ibRA/0" alt="...">
+      </a>
+        {% endif %}
+        {% if order_status == 8 %}
+      <p>我们赠您<font style="color:red;">限量</font>30元优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;">立减30元！</font>绝对不可多得哦！</p>
+      <p>点击下图领取：</p>
+      <a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=138988945" class="thumbnail">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTBzJmiayiatyE7qfQTDOUHHK9ncyYo4OTFNk2c7QiagDqBTnEeTC4IttEA/0" alt="...">
+      </a>
+        {% endif %}
+        {% if order_status == 9 %}
+      <p>我们赠您<font style="color:red;">限量</font>20元优惠券。到天猫【优尼世界旗舰店】购买，满99<font style="color:red;">立减20元！</font>绝对不可多得哦！</p>
+      <p>点击下图领取：</p>
+      <a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=139096871" class="thumbnail">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTh9Zp1rzWo3AV73iaotHUxChVx3SibJ78ZGTRosWKATnMXum7ia3wYdliaA/0" alt="...">
+      </a>
+        {% endif %}
+      <p>二维码直达睡袋购买页面(把二维码图片保存到手机，微信扫一扫，选择右上角“相册”)：</p>
+      <a href="#" class="thumbnail">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuzohN5DJPX5psSXEXWiaZ04bHByUWvExH8kmIyiaQkKic86zBd23bLTTjsPZopSP2ug9Uv60xLtGBpQ/0" alt="...">
+      </a>
+      {% endif %}
       {% else %}
       <p>亲，请耐心等待，您的申请正在审核中。</p>
       <p>您的专属VIP邀请码<font style="color:red">已被使用{{ usage_count }}次</font>，请继续加油!</p>
