--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -40,7 +40,7 @@
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
       <p>您总共邀请了<font style="color:red;">{{ usage_count }}</font>位好友，优尼世界感谢您的努力！</p>
         {% if order_status == 7 %}
-      <p>我们赠您<font style="color:red;">限量</font>50元优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;">立减50元！</font>绝对不可多得哦！</p>
+      <p>您获得了<font style="color:red;">限量</font>50元优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;">立减50元！</font>绝对不可多得哦！</p>
       <p>点击下图领取：</p>
       <a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=139012922" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTpts0BGaZIDymKW0sKj1bH5g3c7JhL6ZQue7UKRZZ4oayDopcge9ibRA/0" alt="...">
@@ -60,7 +60,7 @@
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTh9Zp1rzWo3AV73iaotHUxChVx3SibJ78ZGTRosWKATnMXum7ia3wYdliaA/0" alt="...">
       </a>
         {% endif %}
-      <p>二维码直达睡袋购买页面(把二维码图片保存到手机，微信扫一扫，选择右上角“相册”)：</p>
+      <p style="color:red">二维码直达睡袋购买页面（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuzohN5DJPX5psSXEXWiaZ04bHByUWvExH8kmIyiaQkKic86zBd23bLTTjsPZopSP2ug9Uv60xLtGBpQ/0" alt="...">
       </a>
