--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,11 +9,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">公告</div>
     <div class="panel-body">
-      <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额哦！</p>
-      {% if has_order %}
-      <p style="color:red;">分享<a href="/weixin/sampleads/{{ pk }}/">您的专属VIP邀请码</a>，越多人使用，您中奖的几率就越大！</p>
-      {% endif %}
-      
+      <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
       <p style="color:#3071a9">前五批中奖{{ five_batch }}名，祝贺她们！ <a href="/weixin/finallist/1/1/">详细名单 >></a></p>
     </div>
   </div>
@@ -37,22 +33,22 @@
       <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，优尼世界感谢您的努力！</p>
       <p>天气渐凉，宝宝们都需要一款时尚可爱的保暖睡袋。</p>
         {% if order_status == 7 %}
-      <p>邀请超过15位好友的妈妈们，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减50元！</font>绝对不可多得哦！</p>
-      <p>点击下图领取：</p>
+      <p>邀请超过15位好友的妈妈们，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
+      <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="/weixin/coupon/{{ pk }}/1/" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTpts0BGaZIDymKW0sKj1bH5g3c7JhL6ZQue7UKRZZ4oayDopcge9ibRA/0" alt="...">
       </a>
         {% endif %}
         {% if order_status == 8 %}
-      <p>邀请超过12位好友的妈妈们，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减30元！</font>绝对不可多得哦！</p>
-      <p>点击下图领取：</p>
+      <p>邀请超过12位好友的妈妈们，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减30元！</font></p>
+      <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="/weixin/coupon/{{ pk }}/2/" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTBzJmiayiatyE7qfQTDOUHHK9ncyYo4OTFNk2c7QiagDqBTnEeTC4IttEA/0" alt="...">
       </a>
         {% endif %}
         {% if order_status == 9 %}
-      <p>邀请超过10位好友的妈妈们，奖励<font style="color:red;">限量20元</font>优惠券。到天猫【优尼世界旗舰店】购买任意产品，<font style="color:red;font-size:20px">立减20元！</font>绝对不可多得哦！</p>
-      <p>点击下图领取：</p>
+      <p>邀请超过10位好友的妈妈们，奖励<font style="color:red;">限量20元</font>优惠券。到天猫【优尼世界旗舰店】购买任意产品，<font style="color:red;font-size:20px">立减20元！</font></p>
+      <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="/weixin/coupon/{{ pk }}/3/" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtWOB0jWbjY8ib2Q4ZVIhGQTh9Zp1rzWo3AV73iaotHUxChVx3SibJ78ZGTRosWKATnMXum7ia3wYdliaA/0" alt="...">
       </a>
