--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -11,6 +11,7 @@
     <div class="panel-body">
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
       <p style="color:#3071a9">前五批中奖{{ five_batch }}名，祝贺她们！ <a href="/weixin/finallist/1/1/">详细名单 >></a></p>
+      <p style="color:#3071a9">第六批中奖{{ six_batch }}名，祝贺她们！ <a href="/weixin/finallist/6/1/">详细名单 >></a></p>
     </div>
   </div>
 
@@ -24,7 +25,7 @@
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
       <a href="#" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtmWPcf8VyuRgL4tYeyjkHHYFJv2PNBnCUCf5dCj7ygTOobt4LliaX5EFOn7qdLcicicg88RiaDftbDQA/0" alt="...">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5OvsnKoZ4JEMv7rMt4KlanibtlyWhGp9NVYAGUNiah1T25aUuRaUvUd9w/0" alt="...">
       </a>
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
       <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
