--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -10,7 +10,7 @@
   <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
   <div class="panel-body">
     <p style="color:red;font-size:20px">试用申请已结束，优尼世界感谢您的参与！</p>
-    <p style="color:red"> 1）前五批审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
+    <p style="color:red"> 1）所有审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
   </div>
 </div>
 {% for sample in samples %}
