--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -11,7 +11,7 @@
     <div class="panel-body">
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
       <p style="color:#3071a9">前五批中奖{{ five_batch }}名，祝贺她们！ <a href="/weixin/finallist/1/1/">详细名单 >></a></p>
-      <p style="color:#3071a9">第六批中奖{{ six_batch }}名，祝贺她们！ <a href="/weixin/finallist/6/1/">详细名单 >></a></p>
+      <p style="color:#3071a9">第六批中奖{{ six_batch }}名，邀请码使用超过<font style="color:red">22次</font>，祝贺她们！ <a href="/weixin/finallist/6/1/">详细名单 >></a></p>
     </div>
   </div>
 
