--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -22,24 +22,22 @@
       <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
         {% else %}
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，优尼世界感谢您的努力！</p>
-      <p>天气渐凉，宝宝们都需要一款时尚可爱的保暖睡袋。</p>
         {% if order_status == 7 %}
-      <p>邀请超过6位好友的妈妈们，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
       <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5pK2nCYvuNaqgg2EXKMdAhwrUvMe1sE6RicUDWHqYicpdBturVBJXyN6A/0" alt="...">
       </a>
         {% endif %}
         {% if order_status == 8 %}
-      <p>邀请超过2位好友的妈妈们，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减30元！</font></p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减30元！</font></p>
       <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5wZdhkicnQ6JSgezfcTibBdgfAmhewn5aSL9zyRVgjGosibu9gTv8Zgu6Q/0" alt="...">
       </a>
         {% endif %}
         {% if order_status == 9 %}
-      <p>邀请超过1位好友的妈妈们，奖励<font style="color:red;">限量20元</font>优惠券。到天猫【优尼世界旗舰店】购买任意产品，<font style="color:red;font-size:20px">立减20元！</font></p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量20元</font>优惠券。到天猫【优尼世界旗舰店】购买任意产品，<font style="color:red;font-size:20px">立减20元！</font></p>
       <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5k3Uwf6cCMqLiaMvJHYZlvNzyGbI9XfRqY2vdFayDiciax5YTL2tqakCGA/0" alt="...">
