--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -52,6 +52,7 @@
       {% endif %}
       {% else %}
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次！</p>
       <p>感谢您的参与，请继续关注优尼世界，传播从<font style="color:red">宝宝角度出发的设计和养育理念！</font></p>
       <p>记得，后续活动一定要第一时间参加哦！优尼世界风暴会很快回来滴～～</p>
       {% endif %}
