--- a/shopmanager/shopapp/weixin/templates/weixin/ambass.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/ambass.html
@@ -10,7 +10,7 @@
     <li class="list-group-item list-group-item-success">我的返利</li>
     <li class="list-group-item"><p style="color:orange">账户余额: ￥<span style="font-size:26px">{{ referal_bonus }}</span> <button class="btn btn-warning" style="float:right;">提现</button></p></li>
     <li class="list-group-item"><font style="color:orange">推荐好友: {{ referal_count }}人</font></li>
-    <li class="list-group-item"><font style="color:orange">VIP优惠券: {{ coupon.description }}</font></li>
+    <li class="list-group-item"><font style="color:orange">VIP优惠券(发给朋友): {{ coupon.description }}</font></li>
     <li class="list-group-item"><font style="color:orange">VIP邀请码: {{ vipcode }}</font></li>
   </ul>
 
