--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -12,7 +12,7 @@
     <div class="panel-body">
       {% if order_status > 0  %}
         {% if order_status < 7 %}
-      <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦！所有中奖的妈妈，都请加入<a href="/weixin/referal/">优尼大使计划>></a></p>
+      <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦，您有资格免费领取睡袋！所有中奖的妈妈，都请加入<a href="/weixin/referal/">优尼大使计划>></a></p>
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
       <a href="#" class="thumbnail">
@@ -23,14 +23,14 @@
         {% else %}
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
         {% if order_status == 7 %}
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
       <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5pK2nCYvuNaqgg2EXKMdAhwrUvMe1sE6RicUDWHqYicpdBturVBJXyN6A/0" alt="...">
       </a>
         {% endif %}
         {% if order_status == 8 %}
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下睡袋，付款<font style="color:red;font-size:20px">立减30元！</font></p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减30元！</font></p>
       <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5wZdhkicnQ6JSgezfcTibBdgfAmhewn5aSL9zyRVgjGosibu9gTv8Zgu6Q/0" alt="...">
