invite result revision

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -52,9 +52,10 @@
       {% endif %}
       {% else %}
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次！</p>
+      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次！<font style="color:red;">下次一定要让朋友多使用您的VIP邀请吗哦！</font></p>
+      <p style="color:orange">我们尽最大的努力，让更多的妈妈可以领到睡袋：原本计划的200个睡袋名额，增加到了850个，最后增加到了1004个。</p>
       <p>感谢您的参与，请继续关注优尼世界，传播从<font style="color:red">宝宝角度出发的设计和养育理念！</font></p>
-      <p>记得，后续活动一定要第一时间参加哦！优尼世界风暴会很快回来滴～～</p>
+      <p>只要您持续关注我们，后续第一时间参加活动，下次中奖的就一定是您！优尼世界风暴会很快回来滴～～</p>
       {% endif %}
     </div>
   </div>
