--- a/shopmanager/shopapp/weixin/templates/weixin/remind.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/remind.html
@@ -1,6 +1,6 @@
 {% extends "weixin/weixin_base.html" %}
 
-{% block title %} 手机绑定 {% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block container %}
 
@@ -13,7 +13,7 @@
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#3071a9">查询订单请先验证手机号</h5>
+	  <h5 style="color:#3071a9">请先验证手机号</h5>
 
 	  <div class="input-group">
 	    <span class="input-group-addon">手机号</span>
