--- a/shopmanager/shopapp/weixin/templates/weixin/ambass.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/ambass.html
@@ -17,7 +17,7 @@
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">我的权利</li>
     <li class="list-group-item">优尼大使有权向其好友或其他客户派发优尼世界<font style="color:orange">VIP优惠券</font>。</li>
-    <li class="list-group-item">VIP优惠券凭大使的专属<font style="color:orange">VIP邀请码</font>领取（【活动中心】->【VIP优惠券】）。</li>
+    <li class="list-group-item">VIP优惠券凭大使的专属<font style="color:orange">VIP邀请码</font>领取（【微信购物】->【VIP优惠券】）。</li>
     <li class="list-group-item">VIP优惠券的优惠力度<font style="color:red">全网最高</font>，大大高于天猫店铺优惠券。</li>
   </ul>
 
