--- a/shopmanager/shopapp/weixin/templates/weixin/ambass.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/ambass.html
@@ -12,6 +12,9 @@
     <li class="list-group-item"><font style="color:orange">推荐好友: {{ referal_count }}人</font></li>
     <li class="list-group-item"><font style="color:orange">VIP优惠券(<a href="/weixin/couponfaq/">发给朋友</a>): {{ coupon.description }}</font>（<font style="color:red">{{ coupon_click_count }}人已领取</font>）</li>
     <li class="list-group-item"><font style="color:orange">等待结算：￥{{ payment }}元（{{ num_orders }}个订单）</font></li>
+    {% for mobile in effect_mobiles %}
+    <li class="list-group-item">{{ mobile }}</li>
+    {% endfor %}
     <li class="list-group-item"><font style="color:orange">VIP邀请码: {{ vipcode }}</font></li>
   </ul>
 
