--- a/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
@@ -28,7 +28,7 @@
       <div id="id_coupon" class="row" style="margin-top:10px;display:none">
 	<div class="col-xs-12">
 	  <p>亲，您将获得<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
-	  <p>由于销售旺季到来，小小派睡袋价格将上调20元。上调后，为保证亲能享受最优惠的VIP价格，确认收货后分享朋友圈可在微信申请<font style="color:red;font-size:20px">晒单返现20元，总优惠70元哦！</font>。</p>
+	  <p><font style="color:orange">由于销售旺季到来，小小派睡袋价格将上调20元。上调后，为保证最优惠的VIP价格不受影响，确认收货后可在微信申请</font><font style="color:red;font-size:20px">晒单返现20元，总优惠70元哦！</font>。</p>
 	  <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
 	  <a href="#" class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5pK2nCYvuNaqgg2EXKMdAhwrUvMe1sE6RicUDWHqYicpdBturVBJXyN6A/0" alt="...">
