--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -6,13 +6,40 @@
 {% block container %}
 
 <div class="container-fluid">
+
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:#e8792a">9月免费试用投票</div>
+    <div class="panel-body">
+
+      <div class="row">
+	<div class="col-xs-6" style="text-align:center">
+	  <a href="" class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtMTpiclRQJZ7aBpwKS3xsvUXAqTHAHJBxx0s4CewutslnXYicWiaZtX34jtECwgv5IkV7gibxczqAo7A/0" alt="...">
+	  </a>
+	</div>
+	<div class="col-xs-6" style="text-align:center">
+	  <a href="" class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvuSp8nx80CxFU6BqRvnNq17rGeyo6boPyITfGMbJvImH5Ckx0DtHzW0ictUWaqV5qeGIbUqS3yZxQ/0" alt="...">
+	  </a>
+	</div>
+      </div>
+
+      <div class="row">
+	<div class="col-xs-6" style="text-align:center">
+	  <p style="font-size:20px"><a href="/weixin/survery/">以上两款，快来投票吧 >></a></p>
+	</div>
+      </div>
+    </div>
+  </div>
+
 <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
+  <div class="panel-heading" style="color:orange">8月免费试用：{{ sample.name }}</div>
   <div class="panel-body">
-    <p style="color:red;font-size:20px">试用申请已结束，优尼世界感谢您的参与！</p>
-    <p style="color:red"> 1）每个努力过的妈妈，都有惊喜！<a href="/weixin/inviteresult/">点击查看>></a></p>
+    <p style="color:red;font-size:20px">8月试用申请已结束，优尼世界感谢您的参与！</p>
+    <p style="color:red"> 1）每个努力过的妈妈，都有惊喜！<a href="/weixin/inviteresult/">点击查看您获得的奖品>></a></p>
   </div>
 </div>
+
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px">
   <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
