--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -26,7 +26,7 @@
 
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-	  <p style="color:#e8792a;font-size:20px"><a href="/weixin/survery/">以上两款，快来投票吧 >></a></p>
+	  <p style="color:#e8792a;font-size:20px"><a href="/weixin/survey/">以上两款，快来投票吧 >></a></p>
 	</div>
       </div>
     </div>
