--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -10,7 +10,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:#e8792a">9月免费试用投票</div>
     <div class="panel-body">
-      <p style="color:#029fd6">亲，优尼世界9月大礼，您想赢得的哪款宝贝呢？快来投票吧！</p>
+      <p style="color:#029fd6">亲，优尼世界9月大礼，您想赢走哪款宝贝呢？快来投票吧！</p>
 
       <div class="row">
 	<div class="col-xs-12">
