--- a/shopmanager/shopapp/weixin/templates/weixin/ambass.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/ambass.html
@@ -6,6 +6,7 @@
 
 {% if referal_count > 9 %}
 <div class="container-fluid">
+  <p style="font-size:20px"><a href="/weixin/survey/">9月免费试用投票啦 >></a></p>
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">我的返利</li>
     <li class="list-group-item"><p style="color:orange">账户余额: ￥<span style="font-size:26px">{{ referal_bonus }}</span> <button class="btn btn-warning" style="float:right;">提现</button></p></li>
