--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -50,6 +50,11 @@
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center" id="id_msg">
+	  <p>已有<font style="color:red">{{ total }}</font>人投票</p>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center" id="id_msg">
 	  {% if exist %}
 	  <p style='color:red'>亲，您的选择已经提交！感谢！</p>
 	  {% else %}
