--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -6,12 +6,19 @@
 
 <div class="container-fluid">
 
-
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">审核状态</div>
+    <div class="panel-heading" style="color:orange">公告</div>
+    <div class="panel-body">
+      <p style="color:#e8792a">亲，优尼世界9月大礼即将登场！<a href="/weixin/survey/">快来投票吧 >></a></p>
+    </div>
+  </div>
+
+{% if has_order %}
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">8月试用审核状态</div>
     <div class="panel-body">
       {% if order_status > 0  %}
-        {% if order_status < 7 %}
+      {% if order_status < 7 %}
       <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦，您有资格免费领取睡袋！所有中奖的妈妈，都请加入<a href="/weixin/referal/">优尼大使计划>></a></p>
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
@@ -20,29 +27,13 @@
       </a>
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
       <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
-        {% else %}
+      {% else %}
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
-        {% if order_status == 7 %}
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
+      <p>您的VIP邀请码<font style="color:red;">{{ vipcode }}</font>被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减50元！</font></p>
       <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
 	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5pK2nCYvuNaqgg2EXKMdAhwrUvMe1sE6RicUDWHqYicpdBturVBJXyN6A/0" alt="...">
       </a>
-        {% endif %}
-        {% if order_status == 8 %}
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量30元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减30元！</font></p>
-      <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
-      <a href="#" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5wZdhkicnQ6JSgezfcTibBdgfAmhewn5aSL9zyRVgjGosibu9gTv8Zgu6Q/0" alt="...">
-      </a>
-        {% endif %}
-        {% if order_status == 9 %}
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次，奖励<font style="color:red;">限量20元</font>优惠券。到天猫【优尼世界旗舰店】购买任意产品，<font style="color:red;font-size:20px">立减20元！</font></p>
-      <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
-      <a href="#" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLukPK89qsiaksXpl6OPTeFn5k3Uwf6cCMqLiaMvJHYZlvNzyGbI9XfRqY2vdFayDiciax5YTL2tqakCGA/0" alt="...">
-      </a>
-        {% endif %}
       <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
       <p>二维码<font style="color:red">直达睡袋购买页面</font>（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
       <a href="#" class="thumbnail">
@@ -52,22 +43,13 @@
       {% endif %}
       {% else %}
       <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
-      <p>您的VIP邀请码被使用了<font style="color:red;">{{ usage_count }}</font>次！<font style="color:red;">下次一定要让朋友多使用您的VIP邀请吗哦！</font></p>
-      <p style="color:orange">我们尽最大的努力，让更多的妈妈可以领到睡袋：原本计划的200个睡袋名额，增加到了850个，最后增加到了1004个。</p>
+      <p>您的VIP邀请码<font style="color:red;">{{ vipcode }}</font>被使用了<font style="color:red;">{{ usage_count }}</font>次！<font style="color:red;">下次一定要让朋友多使用您的VIP邀请吗哦！</font></p>
       <p>感谢您的参与，请继续关注优尼世界，传播从<font style="color:red">宝宝角度出发的设计和养育理念！</font></p>
       <p>只要您持续关注我们，后续第一时间参加活动，下次中奖的就一定是您！优尼世界风暴会很快回来滴～～</p>
       {% endif %}
     </div>
   </div>
-
-  <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">公告</div>
-    <div class="panel-body">
-      <p style="color:orange">亲，“优尼世界8月大礼，睡袋免费送宝宝”活动已经圆满结束！</p>
-      <p style="color:#3071a9">前五批中奖{{ five_batch }}名，祝贺她们！ <a href="/weixin/finallist/1/1/">详细名单 >></a></p>
-      <p style="color:#3071a9">第六批中奖{{ six_batch }}名，邀请码使用超过<font style="color:red">22次</font>，祝贺她们！ <a href="/weixin/finallist/6/1/">详细名单 >></a></p>
-    </div>
-  </div>
+{% endif %}
 
   
   <div class="footer">
