--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -56,10 +56,15 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center" id="id_msg">
 	  {% if exist %}
-	  <p style='color:red'>亲，您的选择已经提交！感谢！</p>
+	  <p style='color:red'>亲，您的选择已经提交！快告诉朋友，让他们也来投票吧！</p>
 	  {% else %}
 	  <button type="button" class="btn btn-warning" id="id_submit" onclick="submit();">提交</button>
 	  {% endif %}
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center">
+	  <p style="color:red">温馨提示：参加9月活动的亲，请提前<font style="font-size:20px">绑定手机和填写宝宝档案</font>，活动一开始直接提交申请即可！</p>
 	</div>
       </div>
       
