--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -56,7 +56,7 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center" id="id_msg">
 	  {% if exist %}
-	  <p style='color:red'>亲，您的选择已经提交！快告诉朋友，让他们也来投票吧！</p>
+	  <p style='color:#029fd6'>亲，您的选择已经提交！快告诉朋友，让他们也来投票吧！</p>
 	  {% else %}
 	  <button type="button" class="btn btn-warning" id="id_submit" onclick="submit();">提交</button>
 	  {% endif %}
