--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -68,7 +68,7 @@
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-	  <p style="color:red">温馨提示：参加9月活动的亲，请提前到【我的】->【宝宝档案】<font style="font-size:20px">绑定手机和填写宝宝档案</font>，活动一开始直接提交申请即可！</p>
+	  <p style="color:red">温馨提示：活动将于<font style="font-size:20px">8月29日晚上12:00</font>正式开放申请入口。请提前到【我的】->【宝宝档案】<font style="font-size:20px">绑定手机和填写宝宝档案</font>，活动一开始直接提交申请即可！</p>
 	</div>
       </div>
       
