refund response fix

--- a/shopmanager/shopapp/weixin/templates/weixin/refundresponse.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundresponse.html
@@ -8,6 +8,9 @@
     <tr>
       <td>{{ refund.trade_id }}</td><td>{{ refund|displayName:'refund_type' }}</td><td>{{ refund|displayName:'refund_status' }}</td><td>{{ refund.created }}</td>
     </tr>
+    <tr>
+      <td colspan="4">{{ refund.review_note }}</td>
+    </tr>
   </tbody>
 </table>
 
