--- a/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
@@ -35,6 +35,12 @@
 	<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     {% block tail_script %}
     {% endblock %}
-
+	
+	{% block footer %}
+    <script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb439a9f393f8dce8bed4db5dea1d56a1' type='text/javascript'%3E%3C/script%3E"));
+</script>
+    {% endblock %}
   </body>
 </html>
