fix weixin service and add lingzi to weixin base

--- a/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
@@ -40,7 +40,9 @@
     <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb439a9f393f8dce8bed4db5dea1d56a1' type='text/javascript'%3E%3C/script%3E"));
-</script>
+	</script>
+	<script type="text/javascript" src="http://js.tongji.linezing.com/3510279/tongji.js"></script>
+	<noscript><a href="http://www.linezing.com"><img src="http://img.tongji.linezing.com/3510279/tongji.gif"/></a></noscript>
     {% endblock %}
   </body>
 </html>
