--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -226,6 +226,7 @@
       function babyinfo() {
         if ($("#id_requestcode_button").attr("status") != "1") {
           $("#id_savelabel")[0].innerHTML = "请先验证手机号！";
+	  alert("请先【点击验证】手机号！");
           return;
         }
         var year = $("#id_year").val();
