--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -68,7 +68,7 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#3071a9">验证手机</h5>
+	  <h5 style="color:#3071a9">验证手机</h5><span style="color:red" id="id_verify_msg"></span>
 	  <div class="input-group">
 	    <span class="input-group-addon">手机号</span>
 	    {% if user.isvalid %}
@@ -195,11 +195,37 @@
 	var data = {"mobile":mobile, "openid":openid};
 
         var callback = function (res) {
+	  if (res["code"] == "wait") {
+            $("#id_verify_msg")[0].innerHTML = "请先耐心等待60秒哦！";
+            return;
+          } 
+
           if (res["code"] != "good") {
 	    btn.attr("status","0");
 	    window.clearInterval(global_timer);
-            btn[0].innerHTML = "点击重发";
           }
+
+	  if (res["code"] == "locked") {
+            $("#id_verify_msg")[0].innerHTML = "验证次数达到上限，请联系微信客服处理！";
+            btn[0].innerHTML = "已达上限";
+            return;
+          } 
+	  if (res["code"] == "anony") {
+            $("#id_verify_msg")[0].innerHTML = "请从优尼世界微信登录此页面！";
+            btn[0].innerHTML = "登录有误";
+            return;
+          } 
+	  if (res["code"] == "bad") {
+            $("#id_verify_msg")[0].innerHTML = "请输入正确的手机号码！";
+            btn[0].innerHTML = "点击重发";
+            return;
+          } 
+	  if (res["code"] == "dup") {
+            $("#id_verify_msg")[0].innerHTML = "此号码已被他人验证，请重新输入！";
+            btn[0].innerHTML = "点击重发";
+            return;
+          } 
+
         };
         
         $.ajax({url:url, data:data, success:callback});
@@ -218,7 +244,7 @@
           }
 
 	  window.clearInterval(global_timer);
-          $("#id_verifycode_group").attr("display","none");
+          $("#id_verifycode_group").css("display","none");
           $("#id_requestcode_button").removeClass("btn-primary").addClass("btn-success")[0].innerHTML="已验证";
           $("#id_mobile_input").attr("disabled","disabled");
           $("#id_requestcode_button").attr("status", "1");
